Update azure-pipelines.yml for Azure Pipelines
include pwd

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,4 @@
 # Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
 
 trigger:
 - master
@@ -13,6 +10,7 @@ steps:
     BROWSERSTACK_USERNAME: $(BROWSERSTACK_USERNAME)
     BROWSERSTACK_ACCESS_KEY: $(BROWSERSTACK_ACCESS_KEY)
 
+- script: pwd
 - script: dotnet build
 
 - script: dotnet run --project ./Selenium_C_Sharp/Selenium_C_Sharp.csproj
